force-app/main/default/objects/CampaignMember/fields/cirrusadv__Created_by_Cirrus_Insight__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by Cirrus Insight</label>
    <type>Checkbox</type>
</CustomField>