force-app/main/default/objects/CampaignMember/fields/cirrusadv__Email_Opened__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Email_Opened__c</fullName>
    <formula>cirrusadv__Num_of_Opens__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Opened</label>
    <type>Checkbox</type>
</CustomField>