force-app/main/default/objects/CampaignMember/fields/cirrusadv__First_Clicked__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__First_Clicked__c</fullName>
    <inlineHelpText>First time a link in this email was opened.</inlineHelpText>
    <label>First Clicked</label>
    <type>DateTime</type>
</CustomField>