force-app/main/default/objects/CampaignMember/fields/cirrusadv__First_Opened__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__First_Opened__c</fullName>
    <inlineHelpText>The date this email was first opened by one of the recipients.</inlineHelpText>
    <label>First Opened</label>
    <type>DateTime</type>
</CustomField>