force-app/main/default/objects/CampaignMember/fields/cirrusadv__First_Reply__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__First_Reply__c</fullName>
    <inlineHelpText>Date when first reply received.</inlineHelpText>
    <label>First Reply</label>
    <type>DateTime</type>
</CustomField>