force-app/main/default/objects/CampaignMember/fields/cirrusadv__isTracked__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__isTracked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tracked</label>
    <type>Checkbox</type>
</CustomField>