force-app/main/default/objects/CampaignMember/fields/cirrusadv__Last_Clicked__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Last_Clicked__c</fullName>
    <inlineHelpText>Last time a link in this email was opened.</inlineHelpText>
    <label>Last Clicked</label>
    <type>DateTime</type>
</CustomField>