force-app/main/default/objects/CampaignMember/fields/cirrusadv__Last_Opened__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Last_Opened__c</fullName>
    <inlineHelpText>The date the email was most recently opened.</inlineHelpText>
    <label>Last Opened</label>
    <type>DateTime</type>
</CustomField>