force-app/main/default/objects/CampaignMember/fields/cirrusadv__Last_Reply__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Last_Reply__c</fullName>
    <inlineHelpText>Date of the most recent reply.</inlineHelpText>
    <label>Last Reply</label>
    <type>DateTime</type>
</CustomField>