force-app/main/default/objects/CampaignMember/fields/cirrusadv__Links_Clicked__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Links_Clicked__c</fullName>
    <formula>cirrusadv__Num_of_Clicks__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Whether or not any links in this email were opened by a recipient.</inlineHelpText>
    <label>Links Clicked</label>
    <type>Checkbox</type>
</CustomField>