force-app/main/default/objects/CampaignMember/fields/cirrusadv__Num_of_Clicks__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Num_of_Clicks__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of times links in this email were opened.</inlineHelpText>
    <label># of Clicks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>