force-app/main/default/objects/CampaignMember/fields/cirrusadv__Num_of_Replies__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Num_of_Replies__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of replies received</inlineHelpText>
    <label># of Replies</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>