force-app/main/default/objects/CampaignMember/fields/cirrusadv__Time_Sent__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Time_Sent__c</fullName>
    <inlineHelpText>Time the email was sent</inlineHelpText>
    <label>Time Sent</label>
    <type>DateTime</type>
</CustomField>